Vertex snapping snaps to wrong place while snaps active #40241

Closed
opened 2014-05-17 23:06:33 +02:00 by Tomasz Jurczyk · 4 comments

System Information
Linux Mint 16 Petra x64, NVIDIA GeForce GTS 450

Blender Version
Broken: blender-2.70-4958aff-linux-glibc211-x86_64
Worked: fd80ac4

Short description of error
Vertex snapping started to work incorrectly with
while I use snapping with control key (magnet icon is off). It snaps to some point in space, but not to highlighted vertex under cursor

Snapping with control key works wrong in 4958aff but
Snapping with control works fine in fd80ac4
Snapping with magnet icon on always works fine
File: bug2.blend
and video

Exact steps for others to reproduce the error

  • open attached file (or any other file)
  • in edit mode, try to snap active vertex to vertex using control key. (magnet icon off)
**System Information** Linux Mint 16 Petra x64, NVIDIA GeForce GTS 450 **Blender Version** Broken: blender-2.70-4958aff-linux-glibc211-x86_64 Worked: fd80ac4 **Short description of error** Vertex snapping started to work incorrectly with while I use snapping with control key (magnet icon is off). It snaps to some point in space, but not to highlighted vertex under cursor **Snapping with control key works wrong in 4958aff** but Snapping with control works fine in fd80ac4 Snapping with magnet icon on always works fine File: [bug2.blend](https://archive.blender.org/developer/F89317/bug2.blend) and [video ](http://youtu.be/VHKDyW7hjlM) **Exact steps for others to reproduce the error** - open attached file (or any other file) - in edit mode, try to snap active vertex to vertex using control key. (magnet icon off)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TomaszJurczyk

Added subscriber: @TomaszJurczyk
Campbell Barton self-assigned this 2014-05-18 04:06:03 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Committed workaround 3a3b990b2d

Committed workaround 3a3b990b2d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40241
No description provided.