Workaround T40241: Vertex snapping snaps to wrong place